Project

General

Profile

Actions

Bug #23974

closed

multisite: misleading error on normal shutdown

Added by Casey Bodley almost 6 years ago. Updated almost 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
multisite
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

during normal multisite shutdown, the RGWCoroutinesManager prints the following at debug level 0:

2018-04-08 23:44:15.215676 7fb1b27fc700 0 ERROR: failed to clone shard, completion_mgr.get_next() returned ret=-125

this doesn't actually indicate a fatal error, and shouldn't be logged as such


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #23977: luminous: multisite: misleading error on normal shutdownResolvedCasey BodleyActions
Actions #1

Updated by Casey Bodley almost 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Casey Bodley almost 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Casey Bodley almost 6 years ago

  • Copied to Backport #23977: luminous: multisite: misleading error on normal shutdown added
Actions #6

Updated by Nathan Cutler almost 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF