rgw: raise log level on coroutine shutdown errors

Fixes: http://tracker.ceph.com/issues/23974

Signed-off-by: Casey Bodley <cbodley@redhat.com>